--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -7,7 +7,8 @@
     <ScrollView
         android:id="@+id/svSteps"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp">
 
         <LinearLayout
             android:id="@+id/llContainer"
@@ -16,5 +17,12 @@
             android:orientation="vertical"/>
 
     </ScrollView>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:onClick="revealStep"
+        android:text="Next"/>
 
 </RelativeLayout>
